Fix the issue in blurring of background

--- a/src/components/filters/Sort/Sort.scss
+++ b/src/components/filters/Sort/Sort.scss
@@ -14,11 +14,7 @@
     &.open {
         border: 2px solid var(--redLO);
         border-radius: 5px; 
-        @supports (-webkit-backdrop-filter: blur(10px)) or (backdrop-filter: blur(10px)) {
-            background-color: rgba(255, 255, 255, 0.8); 
-            -webkit-backdrop-filter: blur(10px);
-            backdrop-filter: blur(10px);
-      }
+       
     }
 
     .dropdown-content {
@@ -32,7 +28,7 @@
         background-color: #f9f9f9;
         border: 1px solid #d0d0d4;
         border-radius: 8px;
-        z-index: 1;
+        z-index: 99;
 
         .dropdown-item {
             cursor: pointer;
@@ -40,6 +36,7 @@
             width: 100%;
             padding: 0.8rem;
             border-radius: 8px;
+            
       
             &:hover {
               background-color: var(--redLO);
